--- a/index.html
+++ b/index.html
@@ -77,7 +77,16 @@
         <p>Reduce file size, resize, switch to WebP/JPEG – all 100% in your browser.<br>No uploads, no servers, complete privacy.</p>
     </section>
 
-    <!-- Replace with your real Adsterra code -->
+    <!-- <script>
+  atOptions = {
+    'key' : 'b143447060cebc13127a8dc53da2e587',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/b143447060cebc13127a8dc53da2e587/invoke.js"></script> -->
     <div class="adsterra-container">
         <div class="ad-label">SPONSORED</div>
         <div class="ad-banner">Your Adsterra 728×90 Banner Code Here</div>
