--- a/index.html
+++ b/index.html
@@ -89,7 +89,16 @@
 <script src="https://www.highperformanceformat.com/b143447060cebc13127a8dc53da2e587/invoke.js"></script> -->
     <div class="adsterra-container">
         <div class="ad-label">SPONSORED</div>
-        <div class="ad-banner">Your Adsterra 728×90 Banner Code Here</div>
+        <div class="ad-banner"><script>
+  atOptions = {
+    'key' : 'b143447060cebc13127a8dc53da2e587',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/b143447060cebc13127a8dc53da2e587/invoke.js"></script></div>
     </div>
 
     <div class="container">
