--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         @keyframes fadeIn{from{opacity:0;transform:translateY(-10px)}to{opacity:1;transform:translateY(0)}}
         @media (max-width:768px){.image-players{grid-template-columns:1fr}.button-group{grid-template-columns:1fr}.hero h2{font-size:2rem}.ad-banner{width:320px;height:100px}}
     </style>
+    <script src="https://pl28491045.effectivegatecpm.com/4e/29/f4/4e29f46c489616755f8f847aae1838c7.js"></script>
 </head>
 <body>
 
