--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <script src="https://pl28491045.effectivegatecpm.com/4e/29/f4/4e29f46c489616755f8f847aae1838c7.js"></script>
     <meta name="google-site-verification" content="0r3J62c2hfd3Fa2CeRskq-3Kz1UQxSSbPJ28hfozlAo" />
 </head>
+    <meta name="google-site-verification" content="0r3J62c2hfd3Fa2CeRskq-3Kz1UQxSSbPJ28hfozlAo" />
 <body>
 
     <header class="main-header">
