--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="0r3J62c2hfd3Fa2CeRskq-3Kz1UQxSSbPJ28hfozlAo" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ImageOptimize Pro – Free Browser Image Compressor & Converter</title>
