--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2384359352662390"
+     crossorigin="anonymous"></script>
     <meta name="google-site-verification" content="0r3J62c2hfd3Fa2CeRskq-3Kz1UQxSSbPJ28hfozlAo" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
